feat: nuevo módulo de pagos, QR, garantías y dashboard admin completo